--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+  margin: 0;
+}
 .container{
   border: 4px solid #FAAE5A;
   background: #ffe3bf;
@@ -51,3 +54,19 @@
   opacity: 0.5;
 }
 
+@media screen and (max-width : 600px){
+  .container{
+    width: 280px;
+    height: 280px;
+    position: relative;
+  }
+  .contents{
+    position: absolute;
+    top:65px;
+    left: 40px;
+  }
+  .timer{
+    width: 200px;
+    font-size: 34px;
+  }
+}
